--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/HuaXinChen/wechat-server",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "wechat": "^2.0.3"
   }
 }
